--- a/au-tab-panel/package.json
+++ b/au-tab-panel/package.json
@@ -4,14 +4,13 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port=4000",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": false,
-
   "dependencies": {
     "@angular/common": "7.0.0",
     "@angular/compiler": "7.0.0",
@@ -27,8 +26,9 @@
     "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.7.0",
     "@angular/cli": "^7.0.0",
-    "@angular/compiler-cli": "7.0.0",
+    "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "7.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -36,16 +36,15 @@
     "codelyzer": "~4.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^6.0.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~3.1.3",
-    "@angular-devkit/build-angular": "~0.10.0"
+    "typescript": "~3.1.3"
   }
 }
