ng-content implementation of overlay panel

--- a/au-modal/angular.json
+++ b/au-modal/angular.json
@@ -118,7 +118,7 @@
   "defaultProject": "au-modal",
   "schematics": {
     "@schematics/angular:component": {
-      "prefix": "app",
+      "prefix": "",
       "styleext": "css"
     },
     "@schematics/angular:directive": {
