--- a/au-mask/package.json
+++ b/au-mask/package.json
@@ -4,15 +4,15 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port=4000",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": false,
-
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.13.0",
     "@angular/animations": "7.0.0",
     "@angular/common": "7.0.0",
     "@angular/compiler": "7.0.0",
@@ -23,12 +23,12 @@
     "@angular/platform-browser-dynamic": "7.0.0",
     "@angular/router": "7.0.0",
     "core-js": "^2.4.1",
-    "rxjs": "6.3.3",
-    "zone.js": "0.8.26",
-    "rxjs-compat": "^6.0.0-rc.0",
     "lodash.findindex": "^4.6.0",
     "lodash.findlastindex": "^4.6.0",
-    "lodash.includes": "^4.3.0"
+    "lodash.includes": "^4.3.0",
+    "rxjs": "6.3.3",
+    "rxjs-compat": "^6.0.0-rc.0",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "^7.0.0",
@@ -49,7 +49,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~3.1.3",
-    "@angular-devkit/build-angular": "~0.10.0"
+    "typescript": "~3.1.3"
   }
 }
